# MindMotion

./: .env.template  .pre-commit-config.yaml  README.md  mypy.ini  mypy.py  pyproject.toml
education_platform/: manage.py
education_platform/apps/accounts/: apps.py  authentication_backends.py  custom_validators.py  forms.py  mixins.py  models.py  urls.py  views.py
education_platform/apps/accounts/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_username.py
education_platform/apps/accounts/static/accounts/css/: signin.css  signup.css
education_platform/apps/accounts/templates/accounts/: signin.html  signup.html
education_platform/apps/catalog/: apps.py  urls.py
education_platform/apps/core/: apps.py  urls.py
education_platform/apps/info/: apps.py  urls.py  views.py
education_platform/apps/info/static/info/css/: about_project.css  about_team.css
education_platform/apps/info/templates/info/: about_project.html  about_team.html  policy.html  terms.html
education_platform/config/: settings.py  urls.py
education_platform/static/css/: base_style.css  footer.css  header.css  reset.css
education_platform/templates/: base.html
education_platform/templates/includes/: footer.html  header.html
